added new image

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <div><img src="C:\Users\1951a\gitprac\hello-developers.jpg" alt="Hello developers from space"style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file.</p>
+<div><img src="C:\Users\1951a\gitprac\hello-developers-2.jpg" alt="Hello Git"style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
